--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A Multi-vendor Food. Grocery, eCommerce, Pharmacy & Parcel service.">
+  
+  <!-- SEO Meta Tags - Ensure non-www domain is preferred -->
+  <link rel="canonical" href="https://grozee.com/" />
+  <meta property="og:url" content="https://grozee.com/" />
+  <meta property="og:site_name" content="Grozee" />
+  <meta name="twitter:url" content="https://grozee.com/" />
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +30,6 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js" defer></script>
-  <!--<link rel="canonical" href="https://6ammart-web.6amtech.com/" />-->
 
   <script>
     // The value below is injected by flutter build, do not touch.
